# pcompi

Examen1_P2_2020/Lexer/: expr_lexer.cpp  expr_lexer.h
Examen1_P2_2020/Lexer/fa/: arith.jff  bcomment.jff  identifier.jff  lcomment.jff  number.jff  start.jff
Examen1_P2_2020/Lexer/tests/: CMakeLists.txt  test_lexer.cpp
Examen1_P2_2020/Lexer/tools/: expr_lexer.fa2l  fa2lexer
Examen1_P2_2020/Parser/: expr_lexer.h  expr_parser.cpp  expr_parser.h  gramatica.cpp
Examen1_P2_2020/Parser/tests/: CMakeLists.txt  test_parser.cpp
Examen1_P2_2020/Parser/tools/: ecc  ecc.txt  gramatica.txt
